objects/BMCServiceDesk__Suggested_Owner_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Assigned_Queue__c</fullName>
        <description>Stores the ID of the queue that is automatically assigned to a record based on the defined conditions.</description>
        <label>Assigned Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Criteria_Advanced_Expression__c</fullName>
        <label>Criteria Advanced Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active / Inactive Criteria</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Postfix_Criteria_Advanced_Expression__c</fullName>
        <description>This captures post fix expression for criteria for owner mapping</description>
        <label>Postfix Criteria Advanced Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Suggested_Queue__c</fullName>
        <description>Comma separated SF Id&apos;s for selected queues</description>
        <label>Suggested Queue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Suggested_Staff__c</fullName>
        <description>Comma separated SFId&apos;s for selected users</description>
        <label>Suggested Staff</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <validationRules>
        <fullName>BMCServiceDesk__NameUniqueCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name, $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name, $ObjectType.BMCServiceDesk__Suggested_Owner_Mapping__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>A record with this Suggestion Title already exists. Enter unique Suggestion Title.</errorMessage>
    </validationRules>
</CustomObject>